--- a/producer/src/main/resources/static/error/405.html
+++ b/producer/src/main/resources/static/error/405.html
@@ -27,7 +27,8 @@
 <p style="text-indent: 0em;">
     <span style="font-family: arial, helvetica, sans-serif;">body：<br/></span>
 </p>
-<pre>{
+<pre style="box-sizing: border-box; font-family:  Courier, monospace; font-size: 13.6px; margin-bottom: 16px; margin-top: 0px; overflow-wrap: normal; background-color: rgb(246, 248, 250); border-radius: 3px; line-height: 1.45; overflow: auto; padding: 16px; color: rgb(36, 41, 46);">
+{
 	&quot;input&quot;:[&quot;12 12&quot;,&quot;12 12&quot;],
 	&quot;output&quot;:[&quot;24&quot;,&quot;24&quot;],
 	&quot;timeLimit&quot;:1000,
@@ -36,10 +37,10 @@
 	&quot;src&quot;:&quot;#include&lt;iostream&gt;\nusing namespace std;\nint main()\n{\n\tint a,b;\n\tcin&gt;&gt;a&gt;&gt;b;\n    int c=a+b;\n    cout&lt;&lt;c;\n\n\treturn 0;\n}\n&quot;,
 	&quot;callBack&quot;:&quot;http://acm.swust.edu.cn/OnlineJudge/result.do?key=111&amp;submitId=12&quot;
 }</pre>
-<p style="box-sizing: border-box; margin-bottom: 16px; margin-top: 0px; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255); text-indent: 0em;">
+<p style="box-sizing: border-box; margin-bottom: 16px; margin-top: 0px; color: rgb(36, 41, 46); white-space: normal; background-color: rgb(255, 255, 255); text-indent: 0em;">
     参数列表（json）：
 </p>
-<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255);"
+<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); white-space: normal; background-color: rgb(255, 255, 255);"
     class=" list-paddingleft-2">
     <li>
         <p style="text-indent: 0em;">
@@ -82,10 +83,10 @@
         </p>
     </li>
 </ul>
-<h2 style="box-sizing: border-box; margin-bottom: 16px; margin-top: 24px; line-height: 1.25; border-bottom: 1px solid rgb(234, 236, 239); padding-bottom: 0.3em; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255);">
+<h2 style="box-sizing: border-box; margin-bottom: 16px; margin-top: 24px; line-height: 1.25; border-bottom: 1px solid rgb(234, 236, 239); padding-bottom: 0.3em; color: rgb(36, 41, 46); white-space: normal; background-color: rgb(255, 255, 255);">
     判题语言支持：
 </h2>
-<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255);"
+<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); white-space: normal; background-color: rgb(255, 255, 255);"
     class=" list-paddingleft-2">
     <li>
         <p>
@@ -172,7 +173,7 @@
         </p>
     </li>
 </ul>
-<p style="box-sizing: border-box; margin-bottom: 16px; margin-top: 0px; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255);">
+<p style="box-sizing: border-box; margin-bottom: 16px; margin-top: 0px; color: rgb(36, 41, 46); white-space: normal; background-color: rgb(255, 255, 255);">
     判题采用异步回调更新函数，网站服务器将判题任务和该id提交给判题服务器，判题服务器判题结束自动调用回调函数携带判题结果。<br/>如上述任务会将结果返回到callBack的put接口中，网站服务器只需要指定一个PUT类型回调地址即可，参数submitId为了分辨是哪个任务的回调结果。<br/>为了回调接口安全，防止其他人篡改结果，建议外加一个密钥：&quot;callBack&quot;
     :&quot;<a href="http://ip:port/demo/update.do?submitId=111&key=1asdf112asdfasdf"
               style="box-sizing: border-box; background-color: transparent; color: rgb(3, 102, 214); text-decoration-line: none;">http://ip:port/demo/update.do?submitId=111&amp;key=1asdf112asdfasdf</a>&quot;,
@@ -180,7 +181,7 @@
         href="https://github.com/1510460325/online-judge/blob/master/producer/src/main/java/cn/wzy/producer/controller/JudgeController.java"
         style="box-sizing: border-box; background-color: transparent; color: rgb(3, 102, 214); text-decoration-line: none;">https://github.com/1510460325/online-judge/blob/master/producer/src/main/java/cn/wzy/producer/controller/JudgeController.java</a><br/>返回数据（json）：
 </p>
-<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255);"
+<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); white-space: normal; background-color: rgb(255, 255, 255);"
     class=" list-paddingleft-2">
     <li>
         <p>
@@ -215,7 +216,7 @@
         </li>
     </ul>
 </ul>
-<pre style="box-sizing: border-box; font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; font-size: 13.6px; margin-bottom: 16px; margin-top: 0px; overflow-wrap: normal; background-color: rgb(246, 248, 250); border-radius: 3px; line-height: 1.45; overflow: auto; padding: 16px; color: rgb(36, 41, 46);">{
+<pre style="box-sizing: border-box; font-family:  Courier, monospace; font-size: 13.6px; margin-bottom: 16px; margin-top: 0px; overflow-wrap: normal; background-color: rgb(246, 248, 250); border-radius: 3px; line-height: 1.45; overflow: auto; padding: 16px; color: rgb(36, 41, 46);">{
     &quot;globalMsg&quot;: null,
     &quot;result&quot;: [
         {
@@ -238,10 +239,10 @@
         }
     ]
 }</pre>
-<p style="box-sizing: border-box; margin-bottom: 16px; margin-top: 0px; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255);">
+<p style="box-sizing: border-box; margin-bottom: 16px; margin-top: 0px; color: rgb(36, 41, 46); white-space: normal; background-color: rgb(255, 255, 255);">
     返回结果集：0 ~ 8
 </p>
-<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; white-space: normal; background-color: rgb(255, 255, 255);"
+<ul style="box-sizing: border-box; margin-bottom: 16px; padding-left: 2em; color: rgb(36, 41, 46); font-family:  Helvetica, Arial, sans-serif; white-space: normal; background-color: rgb(255, 255, 255);"
     class=" list-paddingleft-2">
     <li>
         <p>
