--- a/producer/src/main/resources/static/error/405.html
+++ b/producer/src/main/resources/static/error/405.html
@@ -14,6 +14,10 @@
     <span style="font-family: arial, helvetica, sans-serif;">此项目仅提供POST提交接口，接收结果回调接口需要外网服务器地址。</span>
 </p>
 <p style="text-indent: 0em;">
+    <span style="font-family:arial, helvetica, sans-serif">GitHub地址：<a
+            href="https://github.com/1510460325/online-judge">https://github.com/1510460325/online-judge</a></span>
+</p>
+<p style="text-indent: 0em;">
     <span style="font-family:arial, helvetica, sans-serif">请求实例：</span>
 </p>
 <p style="text-indent: 0em;">
