修改跳转地址

--- a/producer/src/main/resources/static/error/405.html
+++ b/producer/src/main/resources/static/error/405.html
@@ -22,7 +22,7 @@
 </p>
 <p style="text-indent: 0em;">
     <span style="font-family:arial, helvetica, sans-serif">url：POST:<a
-            href="http://acm.swust.edu.cn/OnlineJudge/judge.do">http://wangzhengyu.cn:8081/producer/judge.do</a></span>
+            href="http://wangzhengyu.cn:8081/producer/judge.do">http://wangzhengyu.cn:8081/producer/judge.do</a></span>
 </p>
 <p style="text-indent: 0em;">
     <span style="font-family: arial, helvetica, sans-serif;">Con</span><span
